Update docker-compose.yml with correct configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,26 @@ version: '3.8'
 
 services:
   backend:
-    build: ./backend
+    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/instaclone-backend:latest
     container_name: instaclone-backend
     ports:
       - "8000:8000"
     environment:
       - NODE_ENV=production
       - PORT=8000
-      - URL=http://frontend
+      - URL=${URL}
       - MONGO_URI=${MONGO_URI}
-      
       - SECRET_KEY=${SECRET_KEY}
       - API_KEY=${API_KEY}
       - API_SECRET=${API_SECRET}
       - CLOUD_NAME=${CLOUD_NAME}
     restart: always
-    networks:
-      - instaclone-network
 
   frontend:
-    build: ./frontend
+    image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/instaclone-frontend:latest
     container_name: instaclone-frontend
     ports:
       - "80:80"
     depends_on:
       - backend
     restart: always
-    networks:
-      - instaclone-network
-
-networks:
-  instaclone-network:
-    driver: bridge
