updated deployment changes to render

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,5 +1,16 @@
 node_modules
-npm-debug.log
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env*
 .git
 .gitignore
+README.md
+.dockerignore
+Dockerfile
+.nyc_output
+coverage
+.env.local
+.env.development
+.env.test
+.env.production
