--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,31 @@
 FROM node:18-alpine
 
+# Create app directory
 WORKDIR /app
 
 # Copy package files first for better caching
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci --only=production
 
 # Copy the rest of the application
 COPY . .
 
+# Create a non-root user
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nodejs -u 1001
+
+# Change ownership to nodejs user
+RUN chown -R nodejs:nodejs /app
+USER nodejs
+
 # Expose the port your app runs on
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node --version || exit 1
 
 # Command to run the application
 CMD ["node", "index.js"]
