--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,6 +1,22 @@
 node_modules
-npm-debug.log
-.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env*
 .git
 .gitignore
+README.md
+.dockerignore
+Dockerfile
 dist
+build
+.nyc_output
+coverage
+.env.local
+.env.development
+.env.test
+.env.production
+src/**/*.test.js
+src/**/*.test.jsx
+src/**/*.spec.js
+src/**/*.spec.jsx
