--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# Build stage
 FROM node:18-alpine as build
 
 WORKDIR /app
@@ -6,13 +7,14 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm ci --only=production
 
 # Copy the rest of the application
 COPY . .
 
-# Set the API URL for production
-ENV VITE_API_URL=http://instaclone-env.eba-wumsgjeg.ap-south-1.elasticbeanstalk.com
+# Set the API URL for production - Use your existing Render backend URL
+ARG VITE_API_URL=https://instaclone-jg5h.onrender.com
+ENV VITE_API_URL=${VITE_API_URL}
 
 # Build the application
 RUN npm run build
@@ -20,13 +22,30 @@ RUN npm run build
 # Production stage with Nginx
 FROM nginx:alpine
 
+# Install curl for health checks
+RUN apk add --no-cache curl
+
 # Copy built files from the build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
 # Add nginx configuration to properly handle React Router
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Create a non-root user for security
+RUN addgroup -g 1001 -S nginx
+RUN adduser -S nginx -u 1001
+
+# Change ownership of nginx directories
+RUN chown -R nginx:nginx /var/cache/nginx /var/run /var/log/nginx /usr/share/nginx/html
+
+# Switch to non-root user
+USER nginx
 
 EXPOSE 80
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
